--- a/index.html
+++ b/index.html
@@ -11,11 +11,26 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title> yawaaaaaaaaaaaaaaaaa</title>
+    <title>Honda</title>
 </head>
 <body>
     <h3>THE NEW</h3>
     <h1>HONDA ODYSSEY</h1>
     <h3>Modern Design meets Family Fun</h3>
+
+    <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-primary">See Offers</button></a>
+
+    <footer class="bg-body-tertiary text-center">
+        <!-- Grid container -->
+        <div class="container p-4"></div>
+        <!-- Grid container -->
+      
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+          © 2024 Copyright:
+          <a class="text-body" href="https://mdbootstrap.com/">Honda.com</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
 </body>
 </html>
