--- a/pages/hondaOdyssey/index.html
+++ b/pages/hondaOdyssey/index.html
@@ -22,7 +22,7 @@
           <!-- Copyright -->
           <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2024 Copyright:
-            <a class="text-body" href="https://mdbootstrap.com/">Honda.com</a>
+            <a class="text-body" href="../../index.html">Honda.com</a>
           </div>
           <!-- Copyright -->
         </footer>
