--- a/pages/vehicles/index.html
+++ b/pages/vehicles/index.html
@@ -15,9 +15,76 @@
 </head>
 <body>
     <h1>Our Models</h1>
-    <h3>Honda Odyssey 2025</h3>
-    <h3>Honda Civic</h3>
-    <h3>Honda Accord Hybrid</h3>
+
+<section class="Our Models">
+  <div class="text-center container py-5">
+    <h2 class="mt-4 mb-5"><strong>Floristella's Bestsellers</strong></h2>
+
+
+    <section style="background-color: #eee;">
+      <div class="container py-1">
+        <div class="row justify-content-start">
+          <div class="col-lg-4 col-md-12 mb-4">
+            <div class="card text-black">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                class="card-img-top" alt="Apple Computer" />
+              <div class="card-body">
+                <div class="text-center">
+                  <h5 class="card-title">Honda Odyssey</h5>
+                  <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                </div>
+              <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section style="background-color: #eee;">
+
+        <div class="row justify-content-center">
+          <div class="col-lg-4 col-md-12 mb-4">
+            <div class="card text-black">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                class="card-img-top" alt="Apple Computer" />
+              <div class="card-body">
+                <div class="text-center">
+                  <h5 class="card-title">Honda Civic</h5>
+                  <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                </div>
+              <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section style="background-color: #eee;">
+        <div class="row justify-content-end">
+          <div class="col-lg-4 col-md-12 mb-4">
+            <div class="card text-black">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                class="card-img-top" alt="Apple Computer" />
+              <div class="card-body">
+                <div class="text-center">
+                  <h5 class="card-title">Honda Accord Hybrid</h5>
+                  <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                </div>
+              <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+</div>
+  </section>
+
     <a href="../../index.html"></a>
 
     <footer class="bg-body-tertiary text-center">
@@ -28,7 +95,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
           © 2024 Copyright:
-          <a class="text-body" href="https://mdbootstrap.com/">Honda.com</a>
+          <a class="text-body" href="../../index.html">Honda.com</a>
         </div>
         <!-- Copyright -->
       </footer>
