--- a/pages/aboutUs/index.html
+++ b/pages/aboutUs/index.html
@@ -14,6 +14,40 @@
     <title> About Us</title>
 </head>
 <body>
+  <!--NAVBAR-->
+  <div class="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../../index.html">Honda</a>
+        <button
+          data-mdb-collapse-init
+          class="navbar-toggler"
+          type="button"
+          data-mdb-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="../vehicles/index.html">Vehicles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../aboutUs/index.html">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../contactUs/index.html">Contact Us</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+
     <h1>WE ARE DREAM BUILDERS</h1>
     <p>Honda believes in The Power of Dreams. But believing isn't enough. As Soichiro Honda said: “Action without philosophy is a lethal weapon; philosophy without action is worthless.” Dreams inspired Soichiro Honda to create a company and continue to inspire and challenge us. Those dreams continue as Honda brings them to life and moves society forward.</p>
     <h3>Where will The Power of Dreams take you?</h3>
@@ -21,17 +55,18 @@
     <h3>Always Making History</h3>
     <p>Founded in 1948 in Hamamatsu, Japan, Honda opened its first U.S. storefront in Los Angeles, CA, in 1959. What began as a nimble operation with eight industrious associates would quickly grow to astounding heights. For nearly four decades Honda has challenged to exceed government requirements - as the first automaker to meet the Clean Air Act standards in the 1970s, then demonstrating low-emissions vehicle technology that led the state of California to adopt new, more stringent emissions regulations. Through it all, our goal never changed: create a safer, smarter world in which people experience the joy of mobility.</p>
 
-    <footer class="bg-body-tertiary text-center">
-        <!-- Grid container -->
-        <div class="container p-4"></div>
-        <!-- Grid container -->
-      
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-          © 2024 Copyright:
-          <a class="text-body" href="../../index.html">Honda.com</a>
-        </div>
-        <!-- Copyright -->
-      </footer>
+<!--FOOTER-->
+<footer class="bg-body-tertiary text-center">
+  <!-- Grid container -->
+  <div class="container p-4"></div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2024 Copyright:
+    <a class="text-body" href="../../index.html">Honda.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
 </body>
 </html>
