--- a/pages/contactUs/index.html
+++ b/pages/contactUs/index.html
@@ -11,15 +11,14 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Honda</title>
+    <title> Contact Us</title>
 </head>
 <body>
-  
  <!--NAVBAR-->
  <div class="navigation">
   <nav class="navbar navbar-expand-lg navbar-dark bg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Honda</a>
+      <a class="navbar-brand" href="../../index.html">Honda</a>
       <button
         data-mdb-collapse-init
         class="navbar-toggler"
@@ -34,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./pages/vehicles/index.html">Vehicles</a>
+            <a class="nav-link" href="../vehicles/index.html">Vehicles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/aboutUs/index.html">About Us</a>
+            <a class="nav-link" href="../contactUs/index.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/aboutUs/index.html">Contact Us</a
+            <a class="nav-link" aria-current="page" href="../contactUs/index.html">Contact Us</a
             >
           </li>
         </ul>
@@ -48,14 +47,6 @@
     </div>
   </nav>
 </div>
-
-    <h3>THE NEW</h3>
-    <h1>HONDA ODYSSEY</h1>
-    <h3>Modern Design meets Family Fun</h3>
-
-
-<!--BUTTON-->
-    <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-primary">See Offers</button></a>
 
 <!--FOOTER-->
 <footer class="bg-body-tertiary text-center">
