--- a/pages/hondaCivicSedan/index.html
+++ b/pages/hondaCivicSedan/index.html
@@ -14,17 +14,53 @@
     <title> Honda Civic Sedan</title>
 </head>
 <body>
-    <footer class="bg-body-tertiary text-center">
-        <!-- Grid container -->
-        <div class="container p-4"></div>
-        <!-- Grid container -->
-      
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-          © 2024 Copyright:
-          <a class="text-body" href="../../index.html">Honda.com</a>
-        </div>
-        <!-- Copyright -->
-      </footer>
+<!--NAVBAR-->
+<div class="navigation">
+  <nav class="navbar navbar-expand-lg navbar-dark bg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../../index.html">Honda</a>
+      <button
+        data-mdb-collapse-init
+        class="navbar-toggler"
+        type="button"
+        data-mdb-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../vehicles/index.html">Vehicles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../aboutUs/index.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../contactUs/index.html">Contact Us</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
+
+<!--FOOTER-->
+<footer class="bg-body-tertiary text-center">
+  <!-- Grid container -->
+  <div class="container p-4"></div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2024 Copyright:
+    <a class="text-body" href="../../index.html">Honda.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+
 </body>
 </html>
