--- a/pages/vehicles/index.html
+++ b/pages/vehicles/index.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./pages/vehicles/index.html">Vehicles</a>
+            <a class="nav-link" aria-current="page" href="../vehicles/index.html">Vehicles</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../aboutUs/index.html">About Us</a>
@@ -57,7 +57,7 @@
         <h2 class="mt-4 mb-5"><strong>Our Models</strong></h2>
         <div class="row">
               <div class="col-lg-4 col-md-12 mb-4">
-                <a href="../hondaOdyssey/index.html" class="text-reset">
+                <a href="../hondaOdyssey/index.html" class="text-reset text-decoration-none">
                 <div class="card text-black">
                   <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
                     class="card-img-top" alt="Apple Computer" />
@@ -73,20 +73,23 @@
               </a>
           </div>
               <div class="col-lg-4 col-md-12 mb-4">
+                <a href="../hondaCivicSedan/" class="text-reset text-decoration-none">
                 <div class="card text-black">
                   <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
                     class="card-img-top" alt="Apple Computer" />
                   <div class="card-body">
                     <div class="text-center">
-                      <h5 class="card-title">Honda Civic</h5>
+                      <h5 class="card-title">Honda Civic Sedan</h5>
                       <p class="text-muted mb-4">Honda Odyssey 2025</p>
                     </div>
                   <div class="d-flex justify-content-between total font-weight-bold mt-4">
                     </div>
                   </div>
                 </div>
+              </a>
               </div>
               <div class="col-lg-4 col-md-12 mb-4">
+                <a href="../hondaAccordHybrid/index.html" class="text-reset text-decoration-none">
                 <div class="card text-black">
                   <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
                     class="card-img-top" alt="Apple Computer" />
@@ -99,6 +102,7 @@
                     </div>
                   </div>
                 </div>
+              </a>
               </div>
             </div>
           </div>
