--- a/pages/aboutUs/index.html
+++ b/pages/aboutUs/index.html
@@ -47,13 +47,26 @@
       </div>
     </nav>
   </div>
-
+<div class="about">
+  <div class="head1">
     <h1>WE ARE DREAM BUILDERS</h1>
+  </div>
+  <div class="para1">
     <p>Honda believes in The Power of Dreams. But believing isn't enough. As Soichiro Honda said: “Action without philosophy is a lethal weapon; philosophy without action is worthless.” Dreams inspired Soichiro Honda to create a company and continue to inspire and challenge us. Those dreams continue as Honda brings them to life and moves society forward.</p>
+  </div>
+  <div class="head2">
     <h3>Where will The Power of Dreams take you?</h3>
+  </div>
+  <div class="para2">
     <p>At Honda, The Power of Dreams drives us to create intelligent products that enhance mobility and increase the joy in people's lives. We continue to draw inspiration from the visionary ideas of our namesake, Soichiro Honda. He saw incredible power in the freedom of mobility and used his imagination to change the world. It is this mindset that guides us to help move people forward and protect the future we all share. We strive to earn the trust and support of the many diverse communities we happily serve, and we'll always remember who's in the driver's seat on the way to a better world for all.</p>
+  </div>
+  <div class="head3">
     <h3>Always Making History</h3>
+  </div>
+  <div class="para3">
     <p>Founded in 1948 in Hamamatsu, Japan, Honda opened its first U.S. storefront in Los Angeles, CA, in 1959. What began as a nimble operation with eight industrious associates would quickly grow to astounding heights. For nearly four decades Honda has challenged to exceed government requirements - as the first automaker to meet the Clean Air Act standards in the 1970s, then demonstrating low-emissions vehicle technology that led the state of California to adopt new, more stringent emissions regulations. Through it all, our goal never changed: create a safer, smarter world in which people experience the joy of mobility.</p>
+  </div>
+  </div>
 
 <!--FOOTER-->
 <footer class="bg-body-tertiary text-center">
