--- a/pages/contactUs/index.html
+++ b/pages/contactUs/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="../vehicles/index.html">Vehicles</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../contactUs/index.html">About Us</a>
+            <a class="nav-link" href="../aboutUs/index.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="../contactUs/index.html">Contact Us</a
