--- a/pages/vehicles/index.html
+++ b/pages/vehicles/index.html
@@ -48,9 +48,10 @@
   </nav>
 </div>
 
+
+<!--CAR MODELS-->
 <section class="Our Models">
   <div class="text-center container py-5">
-    <h2 class="mt-4 mb-5"><strong>Vehicles</strong></h2>
 
     <section class="Our Models">
       <div class="text-center container py-5">
@@ -106,11 +107,8 @@
               </div>
             </div>
           </div>
-    
     </div>
       </section>
-
-    <a href="../../index.html"><button type="button" class="btn btn-primary">Home</button></a>
 
     <footer class="bg-body-tertiary text-center">
         <!-- Grid container -->
