--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
  <div class="navigation">
   <nav class="navbar navbar-expand-lg navbar-dark bg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Honda</a>
+      <a class="navbar-brand d-md-none">
+        <img src="./assets/img/hondaLogo.png" alt="logo">
+      </a>
       <button
         data-mdb-collapse-init
         class="navbar-toggler"
