--- a/pages/hondaAccordHybrid/index.html
+++ b/pages/hondaAccordHybrid/index.html
@@ -50,6 +50,52 @@
 
     <h1>Honda Accord Hybrid</h1>
 
+    <!--OTHER MODELS-->
+    <section class="Our Models">
+      <div class="text-center container py-5">
+        <section class="Our Models">
+          <div class="text-center container py-5">
+            <h2 class="mt-4 mb-5"><strong>See Others</strong></h2>
+            <div class="row">
+              <div class="d-flex justify-content-center">
+                  <div class="col-lg-4 col-md-12 mb-4">
+                    <a href="../hondaOdyssey/index.html" class="text-reset text-decoration-none">
+                    <div class="card text-black">
+                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                        class="card-img-top" alt="Apple Computer" />
+                      <div class="card-body">
+                        <div class="text-center">
+                          <h5 class="card-title">Honda Odyssey</h5>
+                          <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                        </div>
+                      <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                  </div>
+                  <div class="col-lg-4 col-md-12 mb-4">
+                    <a href="../hondaCivicSedan/index.html" class="text-reset text-decoration-none">
+                    <div class="card text-black">
+                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                        class="card-img-top" alt="Apple Computer" />
+                      <div class="card-body">
+                        <div class="text-center">
+                          <h5 class="card-title">Honda Civic Sedan</h5>
+                          <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                        </div>
+                      <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                  </div>
+                </div>
+              </div>
+        </div>
+      </div>
+          </section>
+
 <!--FOOTER-->
 <footer class="bg-body-tertiary text-center">
   <!-- Grid container -->
