--- a/pages/hondaCivicSedan/index.html
+++ b/pages/hondaCivicSedan/index.html
@@ -48,6 +48,52 @@
   </nav>
 </div>
 
+  <!--OTHER MODELS-->
+  <section class="Our Models">
+    <div class="text-center container py-5">
+      <section class="Our Models">
+        <div class="text-center container py-5">
+          <h2 class="mt-4 mb-5"><strong>See Others</strong></h2>
+          <div class="row">
+            <div class="d-flex justify-content-center">
+                <div class="col-lg-4 col-md-12 mb-4">
+                  <a href="../hondaOdyssey/index.html" class="text-reset text-decoration-none">
+                  <div class="card text-black">
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                      class="card-img-top" alt="Apple Computer" />
+                    <div class="card-body">
+                      <div class="text-center">
+                        <h5 class="card-title">Honda Odyssey</h5>
+                        <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                      </div>
+                    <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                </div>
+                <div class="col-lg-4 col-md-12 mb-4">
+                  <a href="../hondaAccordHybrid/index.html" class="text-reset text-decoration-none">
+                  <div class="card text-black">
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                      class="card-img-top" alt="Apple Computer" />
+                    <div class="card-body">
+                      <div class="text-center">
+                        <h5 class="card-title">Honda Accord Hybrid</h5>
+                        <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                      </div>
+                    <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                </div>
+              </div>
+            </div>
+      </div>
+    </div>
+        </section>
+
 <!--FOOTER-->
 <footer class="bg-body-tertiary text-center">
   <!-- Grid container -->
