--- a/pages/hondaOdyssey/index.html
+++ b/pages/hondaOdyssey/index.html
@@ -56,6 +56,7 @@
         <div class="text-center container py-5">
           <h2 class="mt-4 mb-5"><strong>See Others</strong></h2>
           <div class="row">
+            <div class="d-flex justify-content-center">
                 <div class="col-lg-4 col-md-12 mb-4">
                   <a href="../hondaCivicSedan/" class="text-reset text-decoration-none">
                   <div class="card text-black">
@@ -91,6 +92,7 @@
               </div>
             </div>
       </div>
+    </div>
         </section>
 
 <!--FOOTER-->
