LET ME OUTTTTTTTTTTTTTTTTTTTTTTTT

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
   
- <!--NAVBAR-->
+<!--NAVBAR-->
  <div class="navigation">
   <nav class="navbar navbar-expand-lg navbar-dark bg">
     <div class="container-fluid">
       <a class="navbar-brand d-md-none">
-        <img src="./assets/img/hondaLogo.png" alt="logo">
+        <img src="./assets/img/hondaLogoWhite.png" alt="logo">
       </a>
       <button
         data-mdb-collapse-init
@@ -35,6 +35,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-icon">
+            <a class="nav-icon-link" aria-current="page" href="./index.html">
+            <img src="./assets/img/hondaLogoWhite.png" alt="logo">
+            </a>
+          <li class="nav-icon">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="./pages/vehicles/index.html">Vehicles</a>
           </li>
@@ -55,6 +60,7 @@
     <h1>HONDA ODYSSEY</h1>
     <h3>Modern Design meets Family Fun</h3>
 
+<!--HERO MAIN-->
 
 <!--BUTTON-->
     <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-primary">See Offers</button></a>
