--- a/pages/contactUs/index.html
+++ b/pages/contactUs/index.html
@@ -14,11 +14,14 @@
     <title> Contact Us</title>
 </head>
 <body>
- <!--NAVBAR-->
- <div class="navigation">
+
+<!--NAVBAR-->
+<div class="navigation">
   <nav class="navbar navbar-expand-lg navbar-dark bg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../../index.html">Honda</a>
+      <a class="navbar-brand d-md-none">
+        <img src="../../assets/img/hondaLogoWhite.png" alt="logo">
+      </a>
       <button
         data-mdb-collapse-init
         class="navbar-toggler"
@@ -32,20 +35,30 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-icon">
+            <a class="nav-icon-link" aria-current="page" href="../../index.html">
+            <img src="../../assets/img/hondaLogoWhite.png" alt="logo">
+            </a>
+          <li class="nav-icon">
           <li class="nav-item">
-            <a class="nav-link" href="../vehicles/index.html">Vehicles</a>
+            <a class="nav-link" aria-current="page" href="../vehicles/index.html">Vehicles</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../aboutUs/index.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../contactUs/index.html">Contact Us</a
+            <a class="nav-link" href="../contactUs/index.html">Contact Us</a
             >
           </li>
         </ul>
       </div>
     </div>
   </nav>
+</div>
+
+<!--CONTACT US OPENING-->
+<div class="question">
+  <h1>Have a question? Contact us here:</h1>
 </div>
 
 <!--CONTACT FORMS-->
@@ -75,7 +88,7 @@
           </div>
       </div>
 
-      <button type="submit" class="btn btn-primary px-4 btn-lg">Post</button>
+      <button type="submit" class="btn btn-primary px-4 btn-lg">Submit</button>
   </form>
 </div>
 
