--- a/pages/hondaCivicSedan/index.html
+++ b/pages/hondaCivicSedan/index.html
@@ -14,11 +14,14 @@
     <title> Honda Civic Sedan</title>
 </head>
 <body>
+
 <!--NAVBAR-->
 <div class="navigation">
   <nav class="navbar navbar-expand-lg navbar-dark bg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../../index.html">Honda</a>
+      <a class="navbar-brand d-md-none">
+        <img src="../../assets/img/hondaLogoWhite.png" alt="logo">
+      </a>
       <button
         data-mdb-collapse-init
         class="navbar-toggler"
@@ -32,6 +35,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-icon">
+            <a class="nav-icon-link" aria-current="page" href="../../index.html">
+            <img src="../../assets/img/hondaLogoWhite.png" alt="logo">
+            </a>
+          <li class="nav-icon">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="../vehicles/index.html">Vehicles</a>
           </li>
@@ -47,6 +55,7 @@
     </div>
   </nav>
 </div>
+
 
   <!--OTHER MODELS-->
   <section class="Our Models">
