--- a/pages/hondaOdyssey/index.html
+++ b/pages/hondaOdyssey/index.html
@@ -14,39 +14,47 @@
      <title> Honda Odyssey</title>
 </head>
 <body>
+
 <!--NAVBAR-->
 <div class="navigation">
-      <nav class="navbar navbar-expand-lg navbar-dark bg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../../index.html">Honda</a>
-          <button
-          data-mdb-collapse-init
-          class="navbar-toggler"
-          type="button"
-          data-mdb-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../vehicles/index.html">Vehicles</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../aboutUs/index.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../contactUs/index.html">Contact Us</a
-              >
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg">
+    <div class="container-fluid">
+      <a class="navbar-brand d-md-none">
+        <img src="../../assets/img/hondaLogoWhite.png" alt="logo">
+      </a>
+      <button
+        data-mdb-collapse-init
+        class="navbar-toggler"
+        type="button"
+        data-mdb-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-icon">
+            <a class="nav-icon-link" aria-current="page" href="../../index.html">
+            <img src="../../assets/img/hondaLogoWhite.png" alt="logo">
+            </a>
+          <li class="nav-icon">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../vehicles/index.html">Vehicles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../aboutUs/index.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../contactUs/index.html">Contact Us</a
+            >
+          </li>
+        </ul>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
+</div>
 
 
   <!--OTHER MODELS-->
