ambot nlng tlga sir

--- a/index.html
+++ b/index.html
@@ -56,11 +56,17 @@
   </nav>
 </div>
 
+<!--HERO MAIN-->
+
+  <div class="newhonda">
     <h3>THE NEW</h3>
     <h1>HONDA ODYSSEY</h1>
-    <h3>Modern Design meets Family Fun</h3>
-
-<!--HERO MAIN-->
+  </div>
+  <div class="hondaOdysseySide">
+    <img src="./assets/img/hondaOdysseySide.png" alt="hondaOdyssey" width="1500" height="900">
+  </div>
+<h3>Modern Design meets Family Fun</h3>
+<a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
 
 <!--BUTTON-->
     <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-primary">See Offers</button></a>
