--- a/pages/aboutUs/index.html
+++ b/pages/aboutUs/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title> About Us</title>
 </head>
-<body>
+<body class="bgaboutus">
 
 <!--NAVBAR-->
 <div class="navigation">
