--- a/pages/hondaCivicSedan/index.html
+++ b/pages/hondaCivicSedan/index.html
@@ -56,6 +56,24 @@
   </nav>
 </div>
 
+<!--HONDA ODYSSEY PRODUCT-->
+<section class="Our Models"></section>
+  <div class="text-center container py-5">
+    <h2 class="mt-4 mb-5"><strong>Honda Civic Sedan</strong></h2>
+    <div class="row">
+          <div class="col-lg-4 col-md-12 mb-4">
+            <class="text-reset text-decoration-none">
+            <div class="card text-black">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                class="card-img-top" alt="Apple Computer" />
+              <div class="card-body">
+              <div class="d-flex justify-content-between total font-weight-bold mt-4">
+                </div>
+              </div>
+            </div>
+          </class=>
+      </div>
+    </section>
 
   <!--OTHER MODELS-->
   <section class="Our Models">
