--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Honda</title>
 </head>
-<body class="bghero">
+<body class="bghero img-fluid">
   
 <!--NAVBAR-->
  <div class="navigation">
