--- a/pages/contactUs/index.html
+++ b/pages/contactUs/index.html
@@ -92,6 +92,12 @@
   </form>
 </div>
 
+<!--CONTACT US OPENING-->
+<div class="alternate">
+  <h1>Or call our Customers Relations department at:</h1>
+  <h4>8562-1522/ 8562-4548 local 114</h4>
+</div>
+
 <!--FOOTER-->
 <footer class="bg-body-tertiary text-center">
   <!-- Grid container -->
